# eat-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  publish_en.yml  swagger.yml
.run/: run pytest.run.xml
scripts/: download.sh  parse.sh  reformat.py
src/: cli.py  entities.py  enum_json_creator.py  main.py  menu_parser.py  openmensa.py  translate.py
src/test/: test_menu_parser.py  test_openmensa.py  test_translate.py
src/test/__snapshots__/test_menu_parser/: TestFMIBistroParser.test_fmi_bistro.json  TestMedizinerMensaParser.test_mediziner_mensa.1.json  TestMedizinerMensaParser.test_mediziner_mensa.json  TestStraubingMensaMenuParser.test_straubing_mensa.1.json  TestStraubingMensaMenuParser.test_straubing_mensa.json  TestStudentenwerkMenuParser.test_should_convert_week_to_json.1.json  TestStudentenwerkMenuParser.test_should_convert_week_to_json.json  TestStudentenwerkMenuParser.test_studentenwerk.1.json  TestStudentenwerkMenuParser.test_studentenwerk.2.json  TestStudentenwerkMenuParser.test_studentenwerk.json
src/test/__snapshots__/test_translate/: TestTranslate.test_combined.json  TestTranslate.test_week.json
src/test/assets/enum_to_json/reference/: canteens.json  labels.json
src/test/assets/fmi/for-generation/: calendar_week_2023_21.txt  calendar_week_2023_22.txt
src/test/assets/fmi/reference/: combined.json
src/test/assets/mediziner-mensa/reference/: week_2018_44.json  week_2018_47.json
src/test/assets/straubing/reference/: 16.json  17.json
src/test/assets/studentenwerk/mensa-arcisstr/for-generation/: 2021-09-13.html  2021-09-14.html  2021-09-15.html  2021-09-16.html  2021-09-17.html  2021-09-20.html  2021-09-21.html  2021-09-22.html  2021-09-23.html  2021-09-24.html  2024-07-29.html  2024-07-30.html  2024-07-31.html  2024-08-01.html  2024-08-02.html  2024-08-05.html  2024-08-06.html  2024-08-07.html  2024-08-08.html  2024-08-09.html
src/utils/: file_util.py  json_util.py  util.py
(+52 files in other folders)
